--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,18 @@
 		<version>7</version>
 	</parent>
 	<prerequisites>
-		<maven>3.2.5</maven>
+		<maven>3.2.1</maven>
 	</prerequisites>
+	<repositories>
+		<repository>
+			<id>oss-sonatype</id>
+			<name>oss-sonatype</name>
+			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
