--- a/pom.xml
+++ b/pom.xml
@@ -459,6 +459,11 @@
 			<artifactId>mongo-java-driver</artifactId>
 			<version>2.12.4</version>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.jmimemagic</groupId>
+			<artifactId>jmimemagic</artifactId>
+			<version>0.1.4</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
