--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
-	<version>1.5.11</version>
+	<version>1.5.12-SNAPSHOT</version>
 	<scm>
 		<connection>scm:git:git@github.com:jaeksoft/opensearchserver.git</connection>
 		<developerConnection>scm:git:git@github.com:jaeksoft/opensearchserver.git</developerConnection>
