--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<resteasy.version>3.0.10.Final</resteasy.version>
+		<resteasy.version>3.0.11.Final</resteasy.version>
 		<undertow.version>1.1.3.Final</undertow.version>
 		<skipTests>true</skipTests>
 	</properties>
@@ -115,6 +115,11 @@
 			<groupId>com.opensearchserver</groupId>
 			<artifactId>oss-web-crawler</artifactId>
 			<version>0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-yaml</artifactId>
+			<version>2.4.0</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -373,7 +378,7 @@
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<manifestEntries>
-										<Main-Class>com.jaeksoft.searchlib.OpenSearchServer</Main-Class>
+										<Main-Class>com.jaeksoft.searchlib.opensearchserver.OpenSearchServer</Main-Class>
 									</manifestEntries>
 								</transformer>
 							</transformers>
