--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,9 @@
 # Root logger option
 log4j.rootLogger=INFO, stdout, file 
 
+# Active debug for snapshot
+log4j.logger.com.opensearchserver=DEBUG
+
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.target=System.out 
