--- a/src/deb/control/control
+++ b/src/deb/control/control
@@ -8,7 +8,7 @@ Description: full-text search-engine software
  user interface, the crawlers (web, file, database, ...) and the REST API you
  will be able to integrate advanced full-text search capabilities in 
  your application.
-Depends: java-runtime-headless (>= 1.8)
+Depends: java-runtime-headless
 Recommends: ghostscript, tesseract-ocr
 Maintainer: Emmanuel Keller <ekeller@open-search-server.com>
 Homepage: http://www.opensearchserver.com
