--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,18 +1,10 @@
 # Root logger option
-log4j.rootLogger=INFO, stdout, file 
+log4j.rootLogger=WARN, stdout
 
 # Active debug for snapshot
-log4j.logger.com.opensearchserver=DEBUG
+log4j.logger.com.opensearchserver=WARN
 
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.target=System.out 
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.conversionPattern=%d{ABSOLUTE} %5p %t %c{1}:%M:%L - %m%n
-
-# Direct log messages to a log file
-log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.file.file=server.log
-log4j.appender.file.datePattern='.'yyyy-MM-dd
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.conversionPattern=%d{ABSOLUTE} %5p %t %c{1}:%M:%L - %m%n
+log4j.appender.stdout.layout.conversionPattern=%5p %d{HH:mm:ss,SSS} %m%n
