--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
 		<dependency>
 			<groupId>it.unimi.dsi</groupId>
 			<artifactId>fastutil</artifactId>
-			<version>6.6.2</version>
+			<version>6.6.5</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
@@ -183,7 +183,7 @@
 		<dependency>
 			<groupId>org.apache.pdfbox</groupId>
 			<artifactId>pdfbox-ant</artifactId>
-			<version>1.8.8</version>
+			<version>1.8.9</version>
 		</dependency>
 		<dependency>
 			<groupId>org.zkoss.zk</groupId>
@@ -309,7 +309,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.10</version>
+			<version>1.7.12</version>
 		</dependency>
 		<dependency>
 			<groupId>org.zkoss.zk</groupId>
@@ -353,9 +353,9 @@
 			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.github.detro.ghostdriver</groupId>
+			<groupId>com.github.detro</groupId>
 			<artifactId>phantomjsdriver</artifactId>
-			<version>1.1.0</version>
+			<version>1.2.0</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>servlet-api-2.5</artifactId>
@@ -451,7 +451,7 @@
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
-			<version>2.4.2</version>
+			<version>2.4.3</version>
 		</dependency>
 		<dependency>
 			<groupId>com.atlascopco</groupId>
@@ -478,7 +478,7 @@
 		<poi.version>3.11</poi.version>
 		<selenium.version>2.45.0</selenium.version>
 		<zk.version>6.5.4</zk.version>
-		<jackson.version>2.5.1</jackson.version>
+		<jackson.version>2.5.2</jackson.version>
 	</properties>
 	<description>OpenSearchServer is a powerful, enterprise-class, search engine program. Using the web user interface, the crawlers (web, file, database, ...) and the REST/RESTFul API you will be able to integrate quickly and easily advanced full-text search capabilities in your application. OpenSearchServer runs on Windows and Linux/Unix/BSD.</description>
 	<organization>
